--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 				<h1 class="text-center hero-bloc-text tc-white">
 					La Chouette Agence
 				</h1>
+				<h2 class="col-sm-12 text-center white">La chouette agence est une agence de <strong>web design à Lyon</strong> qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
@@ -99,12 +100,6 @@
 
 <!-- bloc-2-services -->
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
-	<div class="container bloc-md">
-		<div class="row">
-			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
-			</div>
-		</div>
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
