--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
-    <script src="./js/jquery-2.1.0.min.js"></script>
-    <script defer src="./js/bootstrap.min.js"></script>
-    <script defer src="./js/blocs.min.js"></script>
+    <script  src="./js/jquery-2.1.0.min.js"></script>
+    <script async src="./js/bootstrap.min.js"></script>
+    <script async src="./js/blocs.min.js"></script>
     <script defer src="./js/jquery.touchSwipe.min.js"></script>
     <script defer src="./js/gmaps.min.js"></script>
 
