strucutre page partenaires

--- a/Partenaires.html
+++ b/Partenaires.html
@@ -5,6 +5,8 @@
     <meta name="description" content="La Chouette Agence, agence de communication digitale à Lyon, vous accompagne dans la création de supports papiers et web. Conseil, Création, Développement">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link href="https://adrienlgh.github.io/la-chouette-agence" rel="canonical">
+
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,11 +14,11 @@
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script async src="./js/bootstrap.js"></script>
-    <script async src="./js/blocs.js"></script>
-    <script defer src="./js/jquery.touchSwipe.js"></script>
-    <script src="./js/gmaps.js"></script>
+    <script src="./js/jquery-2.1.0.min.js"></script>
+    <script async src="./js/bootstrap.min.js"></script>
+    <script async src="./js/blocs.min.js"></script>
+    <script defer src="./js/jquery.touchSwipe.min.js"></script>
+    <script defer src="./js/gmaps.min.js"></script>
 
     <title> La Chouette agence</title>
 
@@ -114,6 +116,42 @@
                 </ul>
             </div>
         </div>
+
+        <!-- Footer - bloc-8 -->
+        <Footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+            <div class="container bloc-sm">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="text-center white">
+                            La chouette agence - Agence web basée à Lyon.<br>
+                        </p>
+                        <div class="row row-no-gutters social">
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" alt="Twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" alt="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" alt="Site Web" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" alt="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </Footer>
+        <!-- Footer - bloc-8 END -->
     </main>
     <!-- Principal conteneur END -->
 
