--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
     <meta property="og:site_name" content="La chouette agence">
     <!-- Open Graph END -->
     <!-- Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
     <script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
