--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:site_name" content="La chouette agence">
     <!-- Open Graph END -->
     <!-- Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
     <script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -51,7 +51,7 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="421" height="78" class="logo" alt="paris web design logo agence web meilleure agence" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="214" height="40" class="logo" alt="paris web design logo agence web meilleure agence" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                         </button>
