--- a/Partenaires.html
+++ b/Partenaires.html
@@ -31,7 +31,7 @@
     <meta property="og:site_name" content="La chouette agence">
     <!-- Open Graph END -->
     <!-- Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
     <script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -47,35 +47,35 @@
     <main class="page-container">
 
         <!-- bloc-0 -->
-        <div class="bloc bgc-white l-bloc " id="bloc-0">
-            <div class="container bloc-sm">
+        <header class="bloc bgc-white l-bloc " id="bloc-0">
+        <div class="container bloc-sm">
 
-                <nav class="navbar row">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" /></a>
-                        <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-                            <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-                        <ul class="site-navigation nav navbar-nav">
-                            <li>
-                                <a href="index.html">Accueil</a>
-                            </li>
-                            <li>
-                                <a href="#bloc-3-what-i-do">Notre Agence</a>
-                            </li>
-                            <li>
-                                <a href="#bloc-4-portfolio">Portefolio</a>
-                            </li>
-                            <li>
-                                <a href="page2.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+            <nav class="navbar row">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="214" height="40" class="logo" alt="paris web design logo agence web meilleure agence" /></a>
+                    <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+                        <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                    <ul class="site-navigation nav navbar-nav">
+                        <li>
+                            <a href="index.html">Accueil</a>
+                        </li>
+                        <li>
+                            <a href="#bloc-3-what-i-do">Notre Agence</a>
+                        </li>
+                        <li>
+                            <a href="#bloc-4-portfolio">Portefolio</a>
+                        </li>
+                        <li>
+                            <a href="page2.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
+        </header>
         <!-- bloc-0 END -->
         <div class="row">
             <div class="col-sm-4">
