--- a/index.html
+++ b/index.html
@@ -237,22 +237,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" title="Twitter" aria-label="Twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" title="Facebook" aria-label="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Site Web" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" title="Site Web" aria-label="Site Web" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" title="Instagram" aria-label="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
