--- a/page2.html
+++ b/page2.html
@@ -46,33 +46,33 @@
 
         <!-- bloc-0 -->
         <header class="bloc bgc-white l-bloc " id="bloc-0">
-        <div class="container bloc-sm">
+            <div class="container bloc-sm">
 
-            <nav class="navbar row">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="214" height="40" class="logo" alt="paris web design logo agence web meilleure agence" /></a>
-                    <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-                        <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-                    <ul class="site-navigation nav navbar-nav">
-                        <li>
-                            <a href="index.html">Accueil</a>
-                        </li>
-                        <li>
-                            <a href="#bloc-3-what-i-do">Notre Agence</a>
-                        </li>
-                        <li>
-                            <a href="#bloc-4-portfolio">Portefolio</a>
-                        </li>
-                        <li>
-                            <a href="page2.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+                <nav class="navbar row">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="214" height="40" class="logo" alt="paris web design logo agence web meilleure agence" /></a>
+                        <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+                            <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                        <ul class="site-navigation nav navbar-nav">
+                            <li>
+                                <a href="index.html">Accueil</a>
+                            </li>
+                            <li>
+                                <a href="#bloc-3-what-i-do">Notre Agence</a>
+                            </li>
+                            <li>
+                                <a href="#bloc-4-portfolio">Portefolio</a>
+                            </li>
+                            <li>
+                                <a href="page2.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </header>
         <!-- bloc-0 END -->
         <!-- bloc-6 -->
@@ -149,22 +149,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" title="Twitter" aria-label="Twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" title="Facebook" aria-label="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Site Web" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" title="Site Web" aria-label="Site Web" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" alt="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" title="Instagram" aria-label="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
