--- a/page2.html
+++ b/page2.html
@@ -95,7 +95,7 @@
         <!-- bloc-7 -->
         <div class="bloc bgc-white l-bloc" id="bloc-7">
             <div class="container bloc-lg">
-                <div class="row">
+                <div class="row row-flex">
                     <div class="col-sm-6">
                         <form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
                             <div class="form-group">
@@ -127,7 +127,7 @@
                         </form>
                     </div>
                     <div class="col-sm-6">
-                        <p>
+                        <p class="contact-agence">
                             contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
                         </p>
                     </div>
