--- a/page2.html
+++ b/page2.html
@@ -20,6 +20,9 @@
     <script defer src="./js/jquery.touchSwipe.min.js"></script>
     <script defer src="./js/gmaps.min.js"></script>
 
+    <script defer src="https://kit.fontawesome.com/52500bdd02.js" crossorigin="anonymous"></script>
+
+
     <title> La Chouette agence</title>
 
     <!-- Open Graph-->
