--- a/Partenaires.html
+++ b/Partenaires.html
@@ -20,6 +20,9 @@
     <script defer src="./js/jquery.touchSwipe.min.js"></script>
     <script defer src="./js/gmaps.min.js"></script>
 
+    <script defer src="https://kit.fontawesome.com/52500bdd02.js" crossorigin="anonymous"></script>
+
+
     <title> La Chouette agence</title>
 
     <!-- Open Graph-->
@@ -39,10 +42,8 @@
         gtag('config', 'UA-180281782-1');</script>
 
     <!-- Analytics END -->
-
 </head>
 <body>
-
     <!-- Principal conteneur -->
     <main class="page-container">
 
@@ -77,46 +78,72 @@
             </div>
         </header>
         <!-- bloc-0 END -->
-        <div class="row">
-            <div class="col-sm-4">
-                Partenaires
-                <ul>
-                    <li><a href="voiture.com">voiture.com</a></li>
-                    <li><a href="pizza.com">pizza.com</a></li>
-                    <li><a href="matoiture.com">matoiture.com</a></li>
-                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                Annuaires liste 1
-                <ul>
-                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                    <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-                    <li><a href="123seoture.com">123seo.com</a></li>
-                    <li><a href="123site.com">123site.com</a></li>
-                    <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-                    <li><a href="listeagence.com">listeagence.com</a></li>
-                    <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-                    <li><a href="listeseo.com">listeseo.com</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                Annuaires liste 2
-                <ul>
-                    <li><a href="betterseo.com">betterseo.com</a></li>
-                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                    <li><a href="backlink.com">backlink.com</a></li>
-                    <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-                    <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-                </ul>
+        <!-- bloc-6 -->
+        <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+            <div class="container bloc-lg">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1 class="text-center hero-bloc-text tc-white">
+                            Parlons web design !
+                        </h1>
+                        <p class="text-center mg-lg tc-white tight-width-whitespace">
+                            Ils nous font confiance
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-
+        <!-- bloc-6 END -->
+        <!-- bloc-7 -->
+        <div class="bloc bgc-white l-bloc" id="bloc-7">
+            <div class="container bloc-lg">
+                <div class="row row-flex">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            Partenaires
+                            <ul>
+                                <li><a href="voiture.com">voiture.com</a></li>
+                                <li><a href="pizza.com">pizza.com</a></li>
+                                <li><a href="matoiture.com">matoiture.com</a></li>
+                                <li><a href="immobilierseo.com">immobilierseo.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            Annuaires liste 1
+                            <ul>
+                                <li><a href="annuaireagence.com">annuaireagence.com</a></li>
+                                <li><a href="annuaireseo.com">annuaireseo.com</a></li>
+                                <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
+                                <li><a href="123seoture.com">123seo.com</a></li>
+                                <li><a href="123site.com">123site.com</a></li>
+                                <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
+                                <li><a href="listeagence.com">listeagence.com</a></li>
+                                <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+                                <li><a href="listeseo.com">listeseo.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            Annuaires liste 2
+                            <ul>
+                                <li><a href="betterseo.com">betterseo.com</a></li>
+                                <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
+                                <li><a href="seojuicelien.com">seojuicelien.com</a></li>
+                                <li><a href="meilleursliens.com">meilleursliens.com</a></li>
+                                <li><a href="liensagogo.com">liensagogo.com</a></li>
+                                <li><a href="backlink.com">backlink.com</a></li>
+                                <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+                                <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
+                                <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- bloc-7 END -->
+        <!-- ScrollToTop Button -->
+        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+        <!-- ScrollToTop Button END-->
         <!-- Footer - bloc-8 -->
         <Footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
@@ -152,6 +179,10 @@
             </div>
         </Footer>
         <!-- Footer - bloc-8 END -->
+
     </main>
     <!-- Principal conteneur END -->
 
+
+</body>
+</html>
