--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <a href="#bloc-4-portfolio">Portefolio</a>
                             </li>
                             <li>
-                                <a href="page2.html">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -205,11 +205,6 @@
                         <p class="text-center">
                             Création d'un site internet permettant la présentation détaillée de leurs prestations.
                         </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <h2><a href="partenaires.html">Nos partenaires</a></h2>
                     </div>
                 </div>
             </div>
