--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
     <script async src="./js/bootstrap.min.js"></script>
     <script async src="./js/blocs.min.js"></script>
     <script defer src="./js/jquery.touchSwipe.min.js"></script>
-    <script defer src="./js/gmaps.min.js"></script>
+    <script async src="./js/gmaps.min.js"></script>
 
-    <script defer src="https://kit.fontawesome.com/52500bdd02.js" crossorigin="anonymous"></script>
+    <script async src="https://kit.fontawesome.com/52500bdd02.js" crossorigin="anonymous"></script>
 
 
     <title> La Chouette agence</title>
@@ -34,7 +34,7 @@
     <meta property="og:site_name" content="La chouette agence">
     <!-- Open Graph END -->
     <!-- Analytics -->
-    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
     <script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
