--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <script async src="./js/bootstrap.min.js"></script>
     <script async src="./js/blocs.min.js"></script>
     <script defer src="./js/jquery.touchSwipe.min.js"></script>
-    <script defer src="./js/gmaps.min.js"></script>
+    <script async src="./js/gmaps.min.js"></script>
 
-    <script defer src="https://kit.fontawesome.com/52500bdd02.js" crossorigin="anonymous"></script>
+    <script async src="https://kit.fontawesome.com/52500bdd02.js" crossorigin="anonymous"></script>
 
 
     <title> La Chouette agence</title>
@@ -34,7 +34,7 @@
     <meta property="og:site_name" content="La chouette agence">
     <!-- Open Graph END -->
     <!-- Analytics -->
-    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
     <script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -90,7 +90,7 @@
                         </h1>
                         <h2 class="col-sm-12 text-center white">La chouette agence est une agence de <strong>webdesign à Lyon</strong> qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
                         <div class="text-center">
-                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" arial-label="bouton">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" arial-label="bouton">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -136,11 +136,10 @@
             </div>
             <div class="row voffset-lg voffset">
                 <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                    <p class="citation">"La Chouette Agence est un excellente agence web !</br> Les webdesigners ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.</br> Cela nous a aidé à doubler nos ventes en ligne à Lyon"</p>
+                    <p class="citation">"La Chouette Agence est un excellente agence web !<br> Les webdesigners ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon"</p>
                     <p class="nom">Maxime Guilbard, PDG de À vos fourchettes</p>
                 </div>
             </div>
-        </div>
         </div>
         <!-- bloc-2-services END -->
         <!-- bloc-3-what-i-do -->
@@ -218,7 +217,7 @@
                         Prêt à redonner vie à votre projet de webdesign ?<br>Contactez notre équipe !
                     </h2>
                     <div class="col-sm-12 text-center">
-                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero arial-label="bouton">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" arial-label="bouton">Contact</a>
                     </div>
                 </div>
             </div>
