--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <meta property="og:image" content="la-chouette-agence.png">
     <meta property="og:site_name" content="La chouette agence">
     <!-- Open Graph END -->
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="La Chouette agence">
+    <meta name="twitter:description" content="Agence de création et refonte webdesign situé à Lyon. Nous assurons un design et une visibilité de qualité professionnel à vos sites internet.">
+    <meta name="twitter:creator" content="@adrienlhg">
+    <meta name="twitter:image" content="">
+    <!-- Twitter END -->
+
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180281782-1"></script>
     <script>window.dataLayer = window.dataLayer || [];
